--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -1,50 +1,62 @@
 @tailwind utilities;
 
-.filament-peek-preview-modal {
+.filament-peek-modal {
     @apply fixed left-0 top-0 z-[9999] h-screen w-screen;
-    @apply flex flex-col bg-white text-sm font-medium text-gray-900;
+    @apply flex bg-white text-sm font-medium text-gray-900;
     @apply m-0 p-0 !important;
     @apply dark:bg-gray-800 dark:text-gray-300;
 }
 
-.filament-peek-preview-modal-header {
-    @apply flex items-center justify-between border-b bg-white p-4;
+.filament-peek-panel {
+    @apply flex flex-grow flex-col;
+
+    /* border: 1px solid blue; */
+}
+
+.filament-peek-editor {
+    @apply hidden max-w-[30rem];
+}
+
+.filament-peek-panel-header {
+    @apply flex min-h-[4.8rem] items-center justify-between border-b bg-white p-4;
     @apply dark:border-gray-700 dark:bg-gray-800;
+
+    /* border: 1px solid red; */
 }
 
 .filament-peek-device-presets {
     @apply hidden xl:flex;
+
+    button {
+        @apply mx-2 inline-flex flex-col items-center disabled:opacity-25;
+
+        svg {
+            @apply h-6 w-6;
+        }
+
+        &:after {
+            @apply mt-1 block h-1 w-1 rounded-full bg-transparent;
+            content: '';
+        }
+    
+        &.is-active-device-preset:after {
+            @apply bg-current opacity-25;
+        }
+    }
 }
 
-.filament-peek-device-presets button {
-    @apply mx-2 inline-flex flex-col items-center disabled:opacity-25;
-}
-
-.filament-peek-device-presets button:after {
-    @apply mt-1 block h-1 w-1 rounded-full bg-transparent;
-    content: '';
-}
-
-.filament-peek-device-presets button.is-active-device-preset:after {
-    @apply bg-current opacity-25;
-}
-
-.filament-peek-device-presets button svg {
-    @apply h-6 w-6;
-}
-
-.filament-peek-preview-modal-body {
+.filament-peek-panel-body {
     @apply flex-grow bg-gray-100 p-4;
     @apply dark:bg-gray-900;
-}
 
-.filament-peek-preview-modal-body iframe {
-    @apply mx-auto shadow-2xl;
-    transition: all 200ms;
-}
+    iframe {
+        @apply mx-auto shadow-2xl;
+        transition: all 200ms;
+    }
 
-.filament-peek-preview-modal-body.allow-iframe-overflow {
-    @apply overflow-y-auto;
+    &.allow-iframe-overflow {
+        @apply overflow-y-auto;
+    }
 }
 
 body.is-filament-peek-preview-modal-open {
