--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -13,13 +13,14 @@
 }
 
 .filament-peek-panel {
-    @apply flex flex-grow flex-col;
+    @apply flex flex-col;
 }
 
 .filament-peek-panel-header {
     @apply flex items-center justify-between border-b bg-white p-4;
     @apply dark:border-gray-700 dark:bg-gray-800;
     min-height: var(--filament-peek-panel-header-height);
+    user-select: none;
 }
 
 .filament-peek-panel-body {
@@ -43,6 +44,8 @@ body.is-filament-peek-preview-modal-open {
 /*** Preview ***/
 
 .filament-peek-preview {
+    @apply flex-grow;
+
     .filament-peek-panel-header > * {
         @apply min-w-[14rem];
     }
@@ -82,7 +85,7 @@ body.is-filament-peek-preview-modal-open {
 /*** Editor ***/
 
 .filament-peek-editor {
-    @apply hidden max-w-[30rem] border-r;
+    @apply hidden border-r;
     @apply dark:border-gray-700;
 
     .filament-peek-panel-body {
@@ -144,4 +147,20 @@ body.is-filament-peek-preview-modal-open {
             padding: initial;
         }
     }
+}
+
+/*** Resizer ***/
+
+.filament-peek-editor-resizer {
+    @apply absolute left-[100%] top-0 h-full w-[9px] bg-transparent;
+    @apply border-l-[3px] border-transparent;
+
+    &:hover {
+        @apply border-gray-500;
+        cursor: ew-resize;
+    }
+}
+
+.is-filament-peek-editor-resizing {
+    border: 10px solid red;
 }
