Update builder action styles

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -153,18 +153,14 @@ body.is-filament-peek-preview-modal-open {
     }
 
     /* Main builder */
-    .filament-forms-builder-component
-        > .filament-forms-builder-component-block-picker {
+    .fi-fo-builder > .fi-fo-builder-block-picker {
         @apply absolute bottom-0 left-0 w-full p-4;
     }
 
     /* Nested buidlers */
-    .filament-forms-builder-component {
-        .filament-forms-builder-component
-            > .filament-forms-builder-component-block-picker {
-            position: initial;
-            padding: initial;
-        }
+    .fi-fo-builder .fi-fo-builder > .fi-fo-builder-block-picker {
+        position: initial;
+        padding: initial;
     }
 }
 
